--- a/sale-fe/src/app/account/address/address.component.html
+++ b/sale-fe/src/app/account/address/address.component.html
@@ -1,6 +1,6 @@
 <div class="row" *ngIf="user">
     <div class="row"> <button class="btn btn-sm btn-primary" (click)="openAddressForm(content)">New Address</button></div>
-    <table class="table" *ngIf="user?.address.length != 0">
+    <table class="table" *ngIf="user?.address?.length != 0">
         <thead class="table-header">
             <tr>
                 <th class="table-cell table-header-node">
@@ -131,7 +131,7 @@
             </div>
         </div>
     </ng-template>
-    <!-- 
+    <!--
     <ng-container *ngIf="address">
         <div class="address-modify" [ngClass]="{'hidden':currentAddress==null && address.length != 0}">
             <div class="col-md-8 col-12">
