--- a/sale-fe/src/app/account/info/info.component.html
+++ b/sale-fe/src/app/account/info/info.component.html
@@ -1,32 +1,32 @@
 <h1 *ngIf="!isLoaded">Loading...</h1>
 <div class="container" *ngIf="isLoaded">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="name"> Name </label>
-                <input type="text" name="name" id="name" class="form-control" [(ngModel)]="profile.name">
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" class="form-control" [(ngModel)]="profile.email">
-            </div>
-            <div class="form-group">
-                <label for="">Phone Number
-                </label>
-                <input disabled type="text" name="phone" id="phone" class="form-control" [(ngModel)]="profile.phoneNumber">
-            </div>
-            <div class="form-group">
-                <label for="select-gender"> Gender </label>
-                <select id="select-gender" class="form-control" [(ngModel)]="profile.gender">
-                    <option value="male" [selected]="(profile.gender==male)">Male</option>
-                    <option value="female" [selected]="(profile.gender==female)">Female</option>
-                </select>
-            </div>
-        </div>
+  <div class="row">
+    <div class="col-md-6" *ngIf="profile">
+      <div class="form-group">
+        <label for="name"> Name </label>
+        <input type="text" name="name" id="name" class="form-control" [(ngModel)]="profile.name">
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" class="form-control" [(ngModel)]="profile.email">
+      </div>
+      <div class="form-group">
+        <label for="phone">Phone Number
+        </label>
+        <input disabled type="text" name="phone" id="phone" class="form-control" [(ngModel)]="profile.phoneNumber">
+      </div>
+      <div class="form-group">
+        <label for="select-gender"> Gender </label>
+        <select id="select-gender" class="form-control" [(ngModel)]="profile.gender">
+          <option value="male" [selected]="(profile.gender=='male')">Male</option>
+          <option value="female" [selected]="(profile.gender=='female')">Female</option>
+        </select>
+      </div>
     </div>
-    <div class="col-md-12 d-flex justify-content-center update-profile">
-        <button class="btn btn-primary" (click)="modifyProfile()">Update profile</button>
-    </div>
+  </div>
+  <div class="col-md-12 d-flex justify-content-center update-profile">
+    <button class="btn btn-primary" (click)="modifyProfile()">Update profile</button>
+  </div>
 </div>
 
 <!-- <ng-template #content let-modal>
