--- a/sale-fe/src/app/login/login.component.html
+++ b/sale-fe/src/app/login/login.component.html
@@ -14,7 +14,7 @@
         <button type="button" (click)="login(errorModal)" class="btn btn-ghost">Login</button>
         <small class="change-action" (click)="changeAction()"> Sign-up </small>
     </div>
-    <div class="login-form" *ngIf="!isLogin && registForm" [formGroup]="registForm" #child>
+    <div class="login-form" *ngIf="!isLogin && registryForm" [formGroup]="registryForm" #child>
         <h1>Create Account</h1>
         <div class="form-input-material">
             <input type="text" name="username" id="username" formControlName="username" class="form-control-material" />
