--- a/cms-fe/src/app/app.component.html
+++ b/cms-fe/src/app/app.component.html
@@ -6,19 +6,19 @@
 <ng-container *ngIf="userProfile">
   <h2>User information</h2>
   <table>
-    <tr *ngIf="userProfile.username">
+    <tr>
       <th scope="row">Username</th>
       <td>{{ userProfile.username }}</td>
     </tr>
-    <tr *ngIf="userProfile.firstName">
+    <tr>
       <th scope="row">First name</th>
       <td>{{ userProfile.firstName }}</td>
     </tr>
-    <tr *ngIf="userProfile.lastName">
+    <tr>
       <th scope="row">First name</th>
       <td>{{ userProfile.lastName }}</td>
     </tr>
-    <tr *ngIf="userProfile.email">
+    <tr>
       <th scope="row">E-mail</th>
       <td>{{ userProfile.email }}</td>
     </tr>
@@ -27,4 +27,5 @@
       <td>{{ userProfile.emailVerified ? 'Yes' : 'No' }}</td>
     </tr>
   </table>
+  <json-editor [options]="editorOptions" [data]="data"></json-editor>
 </ng-container>
