--- a/cms-fe/src/app/app.component.html
+++ b/cms-fe/src/app/app.component.html
@@ -3,6 +3,14 @@
 <button *ngIf="isLoggedIn" type="button" (click)="logout()">Log out</button>
 <button *ngIf="!isLoggedIn" type="button" (click)="login()">Log in</button>
 
+<form *ngIf="form" [formGroup]="form" (submit)="submit()">
+  <json-editor [options]="editorOptions" formControlName="input" #jsonEditorComponent></json-editor>
+  <div *ngIf="data">
+    <h4>Form submitted</h4>
+    {{ data }}
+  </div>
+  <button>Submit</button>
+</form>
 <ng-container *ngIf="userProfile">
   <h2>User information</h2>
   <table>
@@ -27,5 +35,4 @@
       <td>{{ userProfile.emailVerified ? 'Yes' : 'No' }}</td>
     </tr>
   </table>
-  <json-editor [options]="editorOptions" [data]="data"></json-editor>
 </ng-container>
