--- a/cms-fe/src/app/app.component.html
+++ b/cms-fe/src/app/app.component.html
@@ -1,16 +1,19 @@
 <h1>Keycloak Angular Example</h1>
 
-<button *ngIf="isLoggedIn" type="button" (click)="logout()">Log out</button>
-<button *ngIf="!isLoggedIn" type="button" (click)="login()">Log in</button>
+<button *ngIf="isLoggedIn" mat-stroked-button color="warn" (click)="logout()"> Log out</button>
+<button *ngIf="!isLoggedIn" mat-stroked-button color="warn" (click)="login()"> Log in</button>
 
-<form *ngIf="form" [formGroup]="form" (submit)="submit()">
-  <json-editor [options]="editorOptions" formControlName="input" #jsonEditorComponent></json-editor>
-  <div *ngIf="data">
-    <h4>Form submitted</h4>
-    {{ data }}
-  </div>
-  <button>Submit</button>
+<mat-form-field>
+  <mat-label>Input</mat-label>
+  <input matInput [value]="apiPath" (keyup)="onKey($event)">
+</mat-form-field>
+<button mat-stroked-button color="primary" (click)="load()">GET</button>
+<form [formGroup]="form.formGroup">
+  <json-editor [options]="editorOptions" formControlName="value" #jsonEditorComponent></json-editor>
 </form>
+<button mat-stroked-button color="primary" (click)="post()">Post</button>
+<button mat-stroked-button color="accent" (click)="put()">Put</button>
+<button mat-stroked-button color="warn" (click)="delete()">Delete</button>
 <ng-container *ngIf="userProfile">
   <h2>User information</h2>
   <table>
