--- a/sale-fe/src/app/_variable.scss
+++ b/sale-fe/src/app/_variable.scss
@@ -1,4 +1,4 @@
-$color-primary: #673ab7;
+$color-primary: #170834;
 $color-primary-dark: darken($color-primary, 10%);
 $color-primary-darker: darken($color-primary, 20%);
 $color-primary-bright: lighten($color-primary, 10%);
