--- a/sale-fe/src/app/product-details/product-details.component.html
+++ b/sale-fe/src/app/product-details/product-details.component.html
@@ -1,51 +1,34 @@
 <div class="container" *ngIf="product">
     <div class="esh-product-detail row">
         <div class="gallery col-md-4 col-sm-12">
-            <!-- <div class="gallery-preview-panel">
-                <div class="gallery-preview-panel-content">
-                    <img [src]="selectedImageUrl | prependHost" class="gallery-preview-panel-image">
-                </div>
-            </div> -->
 
             <ngb-carousel *ngIf="selectedSku">
                 <ng-template ngbSlide *ngFor="let image of selectedSku.images">
                     <div class="picsum-img-wrapper">
-                        <img class="magnifiedImg zoom" [src]="image.url | prependHost">
-
+                        <img class="magnifiedImg zoom" [src]="image">
                     </div>
                 </ng-template>
             </ngb-carousel>
 
-            <!-- <div class="next-slick -net-slick-outer- next-slick-horizontal item-gallery-slider d-flex justify-content-between">
-                <div class="next-slick-icon" (click)="slickModal.slickGoTo(0)">
-                    <fa-icon icon="chevron-left"></fa-icon>
-                </div>
-                <ngx-slick-carousel *ngIf="selectedSku?.images[0]?.url" class="carousel next-slick-list" #slickModal="slick-carousel" [config]="slideConfig">
-                    <div ngxSlickItem *ngFor="let image of selectedSku.images" [ngClass]="(image.url === selectedImageUrl)?'next-slick-state-active' : ''" (click)="onImageSelected($event,image.url)" class="slide next-slick-slide">
-                        <img src="{{image.url | prependHost}}" class="item-galley-thumbnail-image" alt="{{image.url}}">
-                    </div>
-                </ngx-slick-carousel>
-                <div class="next-slick-icon" (click)="slickModal.slickGoTo(selectedSku.images.length-1)">
-                    <fa-icon icon="chevron-right"></fa-icon>
-                </div>
-            </div> -->
         </div>
         <!-- Product detail -->
-        <div class="product-detail col-md-8 col-sm-12">
-            <h1>{{product.productName}}</h1>
-            <p> Brand: {{product.brand.name}}</p>
-            <div class="row">
-                <div class="product-info col-md-6 col-sm-12">
-                    <div class="module-price">
+      <div class="product-detail col-md-8 col-sm-12">
+        <h1 class="new-product-title">
+          {{product.productName}}
+        </h1>
+        <p> Brand: {{product.brand.name}}</p>
+        <div class="row">
+          <div class="product-info col-md-6 col-sm-12">
+            <div class="module-price">
                         <span class="sku-price">
-                        <h3>{{selectedSku.price | currency}}</h3>
+                        <h3>{{selectedSku.price | currency:'VND'}}</h3>
                         </span>
-                    </div>
-                    <div class="module-sku-select">
-                        <div id="module_sku_select" class="pdp-block module">
+            </div>
+            <div class="module-sku-select">
+              <div id="module_sku_select" class="pdp-block module">
                             <div class="sku-selector">
                                 <h6 class="section-title">
-                                    Variation
+                                  Màu
                                 </h6>
                                 <div class="sku-content-header">
                                     <span class="sku-name">
@@ -54,7 +37,7 @@
                                 </div>
                                 <div class="sku-content">
                                     <span *ngFor="let sku of product.skus" (click)="onSkuChanged($event, sku)" [ngClass]="(sku==selectedSku)?'sku-variable-img-wrap-selected':''" class="sku-variable-img-wrap">
-                                        <img src="{{sku.images[0].url | prependHost}}" class="sku-image-wrap">
+                                        <img src="{{sku.images[0] }}" class="sku-image-wrap">
                                     </span>
                                 </div>
                             </div>
@@ -62,7 +45,7 @@
                     </div>
                     <div class="module-quantity-input">
                         <div class="section-content">
-                            <label class="section-title">Amount</label>
+                          <label class="section-title">Tạm tính</label>
                             <div class="quantity-picker">
                                 <span>
                                 <a class="next-number-picker-handler next-number-picker-handler-up">
@@ -80,13 +63,13 @@
                                 </a>
                                 </span>
                             </div>
-                            <span *ngIf="(selectedSku.available <= 0)" class="quantity-cotent-warning">Sold out</span>
+                          <span *ngIf="(selectedSku.available <= 0)" class="quantity-cotent-warning">Đã hết hàng</span>
                         </div>
                     </div>
                     <div class="module-add-to-cart">
                         <button [disabled]="!(quantity > 0)" class="btn btn-success add-to-cart" (click)="addToCart($event)">
                             <span>
-                               Add to cart 
+                               Thêm vào giỏ
                             </span>
                         </button>
                         <form [formGroup]="skuForm" name="skuForm" action method="post">
@@ -99,6 +82,7 @@
         </div>
 
         <div class="product-description col-12">
+          <h3>Thông tin sản phẩm<span class="active"></span></h3>
             <div [innerHtml]="product.description"></div>
         </div>
     </div>
