--- a/sale-fe/src/app/account/order/order.component.html
+++ b/sale-fe/src/app/account/order/order.component.html
@@ -72,7 +72,7 @@
                         </span>
                     </div>
                     <div class="col-md-2 item-quantity">
-                        <span class="text"> {{orderItem.price|currency}} </span>
+                        <span class="text"> {{orderItem.price|currency:'VND'}} </span>
                     </div>
                     <div class="col-md-1 item-status item-capsule">
                         <p class="capsule"> {{order.status}} </p>
