--- a/sale-fe/src/app/app.component.html
+++ b/sale-fe/src/app/app.component.html
@@ -14,7 +14,7 @@
             </section>
             <section class="col-lg-1 col-md-1 col-1">
                 <div style="padding-top: 5px;">
-                    <app-cart-status *ngIf="Authenticated"></app-cart-status>
+                    <app-cart-status ></app-cart-status>
                 </div>
             </section>
         </article>
