--- a/sale-fe/src/app/product-details/product-details.component.html
+++ b/sale-fe/src/app/product-details/product-details.component.html
@@ -50,7 +50,7 @@
                                 <span>
                                 <a class="next-number-picker-handler next-number-picker-handler-up">
                                     <button class="btn btn-light next-number-pick-handler-up-inner" [disabled]="(quantity<=0)" (click)="onQuantityChangedDown()">
-                                        <i class="fas fa-minus"></i>
+                                      <fa-icon icon="minus"></fa-icon>
                                     </button>
                                 </a>
                                 </span>
@@ -58,7 +58,7 @@
                                 <span>
                                 <a class="next-number-picker-handler next-number-picker-handler-down">
                                     <button class="btn btn-light next-number-pick-handler-down-inner" [disabled]="(quantity==selectedSku.available)" (click)="onQuantityChangedUp()">
-                                        <i class="fas fa-plus"></i>
+                                      <fa-icon icon="plus"></fa-icon>
                                     </button>
                                 </a>
                                 </span>
