--- a/sale-fe/src/app/catalog/catalog.component.html
+++ b/sale-fe/src/app/catalog/catalog.component.html
@@ -1,43 +1,43 @@
 <section class="row">
-    <div class="col-md-2 ">
-        <section class="esh-catalog-filters">
-          <div class="alert alert-warning esh-catalog-alert" role="alert" [hidden]="!errorReceived">
-            Error requesting
-          </div>
-          <div class="filter-row">
-            <label data-title="brand" for="brand" class="esh-catalog-label">
-              Name:
-            </label>
-            <input class="form-control" type="text" [(ngModel)]="currentQuery.productName">
-          </div>
-          <div class="filter-row">
-            <label data-title="brand" for="brand" class="esh-catalog-label">
-              Brand:
-            </label>
-            <select id="brand" name="brand" class="form-control"
-                    (change)="onBrandFilterChanged($event)">
-              <option value=""></option>
-              <option *ngFor="let brand of brands" [value]="brand.id">{{brand.name}}</option>
-            </select>
-          </div>
-          <div class="filter-row">
-            <label class="esh-catalog-label" data-title="category">
-              Category:
-            </label>
-            <select class="form-control" (change)="onCategoryFilterChanged($event)">
-              <option value=""></option>
-              <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
-            </select>
-          </div>
-          <div class="filter-row d-flex justify-content-center">
-            <button class="btn btn-primary btn-sm" (click)="onFilterApplied($event)">
-              <i class="fas fa-filter"></i> Apply
-            </button>
-          </div>
-        </section>
-    </div>
+  <div class="col-md-2 ">
+    <section class="esh-catalog-filters">
+      <div class="alert alert-warning esh-catalog-alert" role="alert" [hidden]="!errorReceived">
+        Error requesting
+      </div>
+      <div class="filter-row">
+        <label data-title="brand" for="brand" class="esh-catalog-label">
+          Name:
+        </label>
+        <input class="form-control" type="text" [(ngModel)]="currentQuery.productName">
+      </div>
+      <div class="filter-row">
+        <label data-title="brand" for="brand" class="esh-catalog-label">
+          Brand:
+        </label>
+        <select id="brand" name="brand" class="form-control"
+                (change)="onBrandFilterChanged($event)">
+          <option value=""></option>
+          <option *ngFor="let brand of brands" [value]="brand.id">{{brand.name}}</option>
+        </select>
+      </div>
+      <div class="filter-row">
+        <label class="esh-catalog-label" data-title="category">
+          Category:
+        </label>
+        <select class="form-control" (change)="onCategoryFilterChanged($event)">
+          <option value=""></option>
+          <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
+        </select>
+      </div>
+      <div class="filter-row d-flex justify-content-center">
+        <button class="btn btn-primary btn-sm" (click)="onFilterApplied($event)">
+          Tìm
+        </button>
+      </div>
+    </section>
+  </div>
   <div class="col-md-10" *ngIf="catalog">
-    <div class="container" >
+    <div class="container">
       <div *ngIf="catalog.data.length > 0">
 
         <div class="esh-catalog-items row">
@@ -58,5 +58,5 @@
         <app-pager [model]="paginationInfo" (changed)="onPageChanged($event)"></app-pager>
       </div>
     </div>
-    </div>
+  </div>
 </section>
